--- a/locales/ru/translations.json
+++ b/locales/ru/translations.json
@@ -48,12 +48,14 @@
     "restart": {
       "confirmation": "🔄 <b>Перезапуск бота</b>\n\nВы уверены, что хотите перезапустить бота?\n\n<b>Все ваши данные будут удалены:</b>\n• История переписки\n• Настройки\n• Кэш\n\nПожалуйста, подтвердите действие.",
       "success": "✅ <b>Бот перезапущен!</b>\n\nВсе данные очищены. Начинаем заново...",
-      "cancelled": "❌ Перезапуск отменен"
+      "cancelled": "❌ Перезапуск отменен",
+      "already_restarted": "⚠️ <b>Бот уже перезапущен</b>\n\nБот уже был перезапущен. Вам не нужно перезапускать его снова.\n\nЕсли хотите начать заново, просто отправьте сообщение для начала нового разговора!"
     },
     "stop": {
       "confirmation": "🛑 <b>Остановка бота</b>\n\nВы уверены, что хотите остановить бота?\n\n<b>Все ваши данные будут удалены:</b>\n• История переписки\n• Настройки\n• Кэш\n\nЭто действие нельзя отменить!",
       "success": "👋 <b>Бот остановлен</b>\n\nВсе данные удалены. До свидания!",
-      "cancelled": "❌ Остановка отменена"
+      "cancelled": "❌ Остановка отменена",
+      "already_stopped": "⚠️ <b>Бот уже остановлен</b>\n\nБот уже был остановлен. Вам не нужно останавливать его снова.\n\nЕсли хотите начать использовать бота, просто отправьте сообщение или используйте команду /start!"
     }
   },
   "consent": {
@@ -66,7 +68,7 @@
     "choose": "Выбери пол компаньона:",
     "choose_gender": "Выбери пол компаньона:",
     "gender_selected": "Выбран пол: {gender} 😊",
-    "toggle_gender": "Пол компаньона изменен на {gender} 😊",
+    "toggle_gender": "Пол компаньона выбран: {gender} 😊",
     "change_warning": "🔄 Вы уверены, что хотите сменить пол компаньона?\n\nВся история переписки будет удалена!",
     "change_confirmed": "История переписки удалена. Выбери пол компаньона:",
     "change_cancelled": "Смена пола отменена. Можете продолжить общение."
@@ -82,8 +84,12 @@
   },
   "persons": {
     "gender": {
-      "male": ["Ты мужчина"],
-      "female": ["Ты женщина"]
+      "male": [
+        "Ты мужчина"
+      ],
+      "female": [
+        "Ты женщина"
+      ]
     },
     "temperament": {
       "sanguine": "Сангвиник: энергичный, оптимистичный, дружелюбный.",
