--- a/locales/sr/translations.json
+++ b/locales/sr/translations.json
@@ -64,10 +64,11 @@
   },
   "gender": {
     "choose": "Изабери пол сапутника:",
-    "toggle_gender": "Пол сапутника промењен на {gender} 😊",
+    "toggle_gender": "Пол сапутника одабран: {gender} 😊",
     "change_warning": "🔄 Да ли сте сигурни да желите променити пол сапутника?\n\nЦела историја ћаскања ће бити обрисана!",
     "change_confirmed": "Историја ћаскања обрисана. Изабери пол сапутника:",
-    "change_cancelled": "Промена пола отказана. Можеш наставити комуникацију."
+    "change_cancelled": "Промена пола отказана. Можеш наставити комуникацију.",
+    "gender_selected": "Odabran pol: {gender} 😊"
   },
   "messages": {
     "limit_exceeded": "Прекорачен дневни лимит бесплатних порука. Желиш неограничено? Купи премијум!",
@@ -80,8 +81,12 @@
   },
   "persons": {
     "gender": {
-      "male": ["Ти си мушкарац"],
-      "female": ["Ти си жена"]
+      "male": [
+        "Ти си мушкарац"
+      ],
+      "female": [
+        "Ти си жена"
+      ]
     },
     "temperament": {
       "sanguine": "Сангвиник: енергичан, оптимистичан, пријатељски настројен.",
@@ -198,7 +203,9 @@
     "language_sr": "🇷🇸 Српски",
     "language_de": "🇩🇪 Deutsch",
     "language_es": "🇪🇸 Español",
-    "choose_language": "🌍 Изабери језик"
+    "choose_language": "🌍 Изабери језик",
+    "read_terms": "Pročitaj uslove korišćenja",
+    "read_disclaimer": "Pročitaj odricanje odgovornosti"
   },
   "ai_prompts": {
     "female": "Ти си ИИ девојка која флертује и подржава усамљене људе. Буди слатка, емпатична и игрива.",
