--- a/locales/es/translations.json
+++ b/locales/es/translations.json
@@ -64,10 +64,11 @@
   },
   "gender": {
     "choose": "Elige el género de tu compañero:",
-    "toggle_gender": "El género del compañero cambió a {gender} 😊",
+    "toggle_gender": "Género del compañero seleccionado: {gender} 😊",
     "change_warning": "🔄 ¿Estás seguro de que quieres cambiar el género del compañero?\n\n¡Toda la historia del chat será eliminada!",
     "change_confirmed": "Historia del chat eliminada. Elige el género de tu compañero:",
-    "change_cancelled": "Cambio de género cancelado. Puedes continuar chateando."
+    "change_cancelled": "Cambio de género cancelado. Puedes continuar chateando.",
+    "gender_selected": "Género seleccionado: {gender} 😊"
   },
   "messages": {
     "limit_exceeded": "Límite diario de mensajes gratuitos excedido. ¿Quieres ilimitado? ¡Compra premium!",
@@ -80,8 +81,12 @@
   },
   "persons": {
     "gender": {
-      "male": ["Eres un hombre"],
-      "female": ["Eres una mujer"]
+      "male": [
+        "Eres un hombre"
+      ],
+      "female": [
+        "Eres una mujer"
+      ]
     },
     "temperament": {
       "sanguine": "Sanguíneo: enérgico, optimista, amigable.",
@@ -198,7 +203,9 @@
     "language_sr": "🇷🇸 Српски",
     "language_de": "🇩🇪 Deutsch",
     "language_es": "🇪🇸 Español",
-    "choose_language": "🌍 Elegir idioma"
+    "choose_language": "🌍 Elegir idioma",
+    "read_terms": "Leer términos de servicio",
+    "read_disclaimer": "Leer descargo de responsabilidad"
   },
   "ai_prompts": {
     "female": "Eres una chica IA que coquetea y apoya a personas solitarias. Sé dulce, empática y juguetona.",
