--- a/locales/pl/translations.json
+++ b/locales/pl/translations.json
@@ -66,7 +66,7 @@
     "choose": "Wybierz płeć swojego towarzysza:",
     "choose_gender": "Wybierz płeć swojego towarzysza:",
     "gender_selected": "Wybrana płeć: {gender} 😊",
-    "toggle_gender": "Płeć towarzysza zmieniona na {gender} 😊",
+    "toggle_gender": "Płeć towarzysza wybrana: {gender} 😊",
     "change_warning": "🔄 Czy na pewno chcesz zmienić płeć towarzysza?\n\nCała historia rozmów zostanie usunięta!",
     "change_confirmed": "Historia rozmów została usunięta. Wybierz płeć swojego towarzysza:",
     "change_cancelled": "Zmiana płci anulowana. Możesz kontynuować rozmowę."
@@ -88,12 +88,18 @@
     "no": "Nie",
     "female": "Dziewczyna",
     "male": "Chłopak",
-    "back_to_help": "Powrót do pomocy"
+    "back_to_help": "Powrót do pomocy",
+    "read_terms": "Przeczytaj warunki usługi",
+    "read_disclaimer": "Przeczytaj zastrzeżenie"
   },
   "persons": {
     "gender": {
-      "male": ["Jesteś mężczyzną"],
-      "female": ["Jesteś kobietą"]
+      "male": [
+        "Jesteś mężczyzną"
+      ],
+      "female": [
+        "Jesteś kobietą"
+      ]
     },
     "temperament": {
       "sanguine": "Sangwinik: energiczny, optymistyczny, przyjazny.",
